DELETE request
